# sensei

./: .envrc  .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  Makefile  README.md  build.rs  devshell.toml  docker-compose.yml  flake.nix
.direnv/: flake-profile  flake-profile-1-link  flake-profile-2-link  flake-profile-3-link  flake-profile-4-link
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  on-push.yml  on-tag.yml
ci/: test.bash
entity/: Cargo.toml
entity/src/: access_token.rs  cluster_node.rs  keychain.rs  kv_store.rs  lib.rs  macaroon.rs  node.rs  payment.rs  peer.rs  peer_address.rs  prelude.rs  script_pubkey.rs  seaql_migrations.rs  transaction.rs  user.rs  utxo.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220421_000001_create_nodes_table.rs  m20220424_000001_create_access_tokens_table.rs  m20220424_000002_create_macaroons_table.rs  m20220424_000003_create_payments_table.rs  m20220424_000004_create_kv_store_table.rs  m20220428_000001_create_utxos_table.rs  m20220428_000002_create_script_pubkeys_table.rs  m20220428_000003_create_transactions_table.rs  m20220428_000004_create_keychains_table.rs  m20220616_000001_create_peers_table.rs  m20220701_000001_create_peer_addresses_table.rs  m20220808_000001_create_users_table.rs  m20221003_000001_create_cluster_nodes_table.rs
proto/: sensei.proto
scripts/: compile-proto
senseicore/: Cargo.toml
senseicore/src/: channels.rs  config.rs  database.rs  disk.rs  error.rs  event_handler.rs  events.rs  hex_utils.rs  lib.rs  network_graph.rs  node.rs  p2p.rs  persist.rs  router.rs  utils.rs
senseicore/src/chain/: bitcoind_client.rs  broadcaster.rs  database.rs  listener.rs  manager.rs  mod.rs
senseicore/src/chain/remote/: block_source.rs  broadcaster.rs  fee_estimator.rs  mod.rs
senseicore/src/p2p/: background_processor.rs  bubble_gossip_route_handler.rs  channel_peer_reconnector.rs  mod.rs  node_announcer.rs  node_info.rs  peer_connector.rs  router.rs  utils.rs
senseicore/src/services/: admin.rs  mod.rs  node.rs
senseicore/src/signer/: mod.rs  util.rs  vls.rs
senseicore/tests/: smoke_test.rs  tests.rs
src/: cli.rs  config.rs  disk.rs  error.rs  event_handler.rs  hex_utils.rs  main.rs  node.rs  utils.rs  version.rs
src/chain/: bitcoind_client.rs  broadcaster.rs  database.rs  fee_estimator.rs  listener.rs  listener_database.rs  manager.rs  mod.rs  wallet.rs
src/database/: admin.rs  mod.rs  node.rs
src/grpc/: adaptor.rs  admin.rs  client.rs  mod.rs  node.rs  sensei.rs  utils.rs
src/http/: admin.rs  auth_header.rs  macaroon_header.rs  mod.rs  node.rs  utils.rs
src/hybrid/: mod.rs
src/lib/: chacha20.rs  chachapoly1305rfc.rs  connection_manager.rs  database.rs  events.rs  mod.rs  network_graph.rs  noise.rs  persist.rs  poly1305.rs
src/services/: admin.rs  mod.rs  node.rs
system-tests/: compile-proto  requirements.txt  system-test.py
tests/: integration-test.py
web-admin/: README.md  craco.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
web-admin/lang/: en.json  fr.json
web-admin/public/: index.html  manifest.json
web-admin/src/: App.tsx  index.css  index.tsx
web-admin/src/auth/mutations/: createAdmin.ts  init.ts
web-admin/src/auth/pages/: AdminLoginPage.tsx  LoginPage.tsx  LogoutPage.tsx  NodeLoginPage.tsx  SetupPage.tsx
web-admin/src/auth/queries/: getStatus.ts
web-admin/src/chain/components/: OnChainBalance.tsx  UnusedAddress.tsx
web-admin/src/chain/mutations/: signMessage.ts
web-admin/src/chain/pages/: ChainPage.tsx  FundPage.tsx
web-admin/src/chain/queries/: getBalance.ts  getUnusedAddress.ts
web-admin/src/channels/components/: ChannelsList.tsx  OpenChannelForm.tsx
web-admin/src/channels/mutations/: closeChannel.ts  openChannel.ts
web-admin/src/channels/pages/: ChannelsPage.tsx  OpenChannelPage.tsx
web-admin/src/channels/queries/: getChannels.ts
web-admin/src/components/: ErrorAlert.tsx  InfoAlert.tsx  ListBox.tsx  RequireAdminAuth.tsx  RequireAuth.tsx  RequireNodeAuth.tsx  Spinner.js  SuccessAlert.tsx  Transition.js  WarningAlert.tsx
web-admin/src/components/form/: Button.tsx  CheckboxSwitch.tsx  FooterSubmitButton.tsx  Form.tsx  Input.tsx  Radio.tsx  Select.tsx  SubmitButton.tsx  TextArea.tsx  index.tsx
web-admin/src/components/icons/: ArrowRight.tsx  BarChart.tsx  Bell.tsx  Briefcase.tsx  Calendar.tsx  Check.tsx  ChevronDoubleLeft.tsx  ChevronDoubleRight.tsx  ChevronLeft.tsx  ClipboardList.tsx  Clock.tsx  Close.tsx  Cog.tsx  Collection.tsx  CreditCard.tsx  DocumentDownload.tsx  DocumentText.tsx  DownCaret.tsx  Exclamation.tsx  Home.tsx  Key.tsx  LightningBolt.tsx  Lock.tsx  Minus.tsx  Newspaper.tsx  Refresh.tsx  Search.tsx  Sensei.tsx  SenseiMark.tsx  ShoppingCart.tsx  Speakerphone.tsx  Support.tsx  SvgCash.tsx  SvgHamburger.tsx  User.tsx  UserCircle.tsx  Users.tsx  index.tsx
web-admin/src/components/tables/: EditableLabelColumn.tsx  SearchableTable.tsx
web-admin/src/config/components/: ConfigForm.tsx
web-admin/src/config/mutations/: updateConfig.ts
web-admin/src/config/pages/: ConfigPage.tsx
web-admin/src/config/queries/: getConfig.ts
web-admin/src/contexts/: auth.tsx  confirm.tsx  error.tsx  modal.tsx  notification.tsx
web-admin/src/hooks/: useDebounce.ts
web-admin/src/layouts/: AdminNav.tsx  AppLayout.tsx
web-admin/src/nodes/components/: NewNodeForm.tsx  NodesList.tsx  StartNodeForm.tsx  StopNodeForm.tsx
web-admin/src/nodes/mutations/: adminStartNode.ts  adminStopNode.ts  createNode.ts  deleteNode.ts  startNode.ts  stopNode.ts
web-admin/src/nodes/pages/: NewNodePage.tsx  NodesPage.tsx
web-admin/src/nodes/queries/: getNodeInfo.ts  getNodes.ts
web-admin/src/payments/components/: CreateInvoiceForm.tsx  PayInvoiceForm.tsx  PaymentsList.tsx
web-admin/src/payments/mutations/: createInvoice.ts  decodeInvoice.ts  deletePayment.ts  keysend.ts  labelPayment.ts  payInvoice.ts
web-admin/src/payments/pages/: PaymentsPage.tsx  ReceiveMoneyPage.tsx  SendMoneyPage.tsx
web-admin/src/translations/: en.json  fr.json
web-admin/src/utils/: auth.ts  capitalize.ts  sensei.ts
(+36 files in other folders)
