[package]
name = "sensei"
version = "0.2.1"
edition = "2021"

[workspace]
members = [".", "entity", "migration", "senseicore"]

[[bin]] # Bin to run sensei cli
name = "senseicli"
path = "src/cli.rs"

[[bin]] # Bin to run sensei daemon
name = "senseid"
path = "src/main.rs"

[dependencies]
bitcoin = { version = "0.28.1" }
bitcoincore-rpc = "0.15"
futures = "0.3"
chrono = "0.4"
rand = "0.8.4"
axum = { version = "0.4.2", features = ["headers"] }
http = "0.2"
tower = { version = "0.4", features = ["full"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.17", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }
log = "0.4.16"
env_logger = "0.9.0"
tonic = "0.6"
prost = "0.9"
pin-project = "1.0"
hyper = "0.14"
clap = { version = "3.0", features = [ "derive", "env" ] }
headers = "0.3"
macaroon = "0.2"
tower-http = { version = "0.3.4", features = ["fs", "trace", "cors"] }
tower-cookies = "0.4"
dirs = "4.0"
rust-embed="6.3.0"
mime_guess = { version = "2" }
signal-hook = "0.3.14"
entity = { path = "entity" }
migration = { path = "migration" }
senseicore = { path = "senseicore" }

[build-dependencies]
tonic-build = "0.6"

[dev-dependencies]
bitcoind = { version = "0.26", features = [ "22_0" ] }
serial_test = "0.6.0"

[[test]]
name = "senseicore"
path = "senseicore/tests/tests.rs"
