[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0" }
bdk = "0.22"

[dependencies.sea-orm]
version = "^0.7.1"
features = [
  "sqlx-mysql",
  "sqlx-postgres",
  "sqlx-sqlite", 
  "runtime-tokio-rustls", 
  "macros",
  "debug-print",
  "with-chrono"
]
