[package]
name = "senseicore"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "senseicore"
path = "src/lib.rs"

[dependencies]
lightning = { version = "0.0.108", features = ["max_level_trace"] }
lightning-block-sync = { version = "0.0.108", features = [ "rpc-client" ] }
lightning-invoice = { version = "0.16.0" }
lightning-net-tokio = { version = "0.0.108" }
lightning-persister = { version = "0.0.108" }
lightning-background-processor = { version = "0.0.108" }
lightning-rapid-gossip-sync = { version = "0.0.108" }
base64 = "0.13.0"
bitcoin = "0.28"
bitcoin-bech32 = "0.12"
bech32 = "0.8"
futures = "0.3"
chrono = "0.4"
rand = "0.8.4"
http = "0.2"
tower = { version = "0.4", features = ["full"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }
log = "0.4.16"
bitcoincore-rpc = "0.15"
bdk = "0.19"
pin-project = "1.0"
hyper = "0.14"
clap = { version = "3.0", features = [ "derive", "env" ] }
tindercrypt = { version = "0.3.2", default-features = false }
uuid = { version = "0.8", features = ["serde", "v4"] }
macaroon = "0.2"
dirs = "4.0"
public-ip = "0.2"
entity = { path = "../entity" }
migration = { path = "../migration" }
triggered = "0.1"
anyhow = "1.0"

[dependencies.lightning-signer-core]
git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git"
rev = "5a7f67dbf0245f35b61342d62b99ddedbc6243c8"
#path = "../../vls/lightning-signer-core"

[dependencies.lightning-signer-server]
git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git"
rev = "5a7f67dbf0245f35b61342d62b99ddedbc6243c8"
#path = "../../vls/lightning-signer-server"
default_features = false
features = ["persist_kv_json"]

[dependencies.vls-protocol-signer]
git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git"
rev = "5a7f67dbf0245f35b61342d62b99ddedbc6243c8"
#path = "../../vls/vls-protocol-signer"

[dependencies.vls-protocol-client]
git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git"
rev = "5a7f67dbf0245f35b61342d62b99ddedbc6243c8"
#path = "../../vls/vls-protocol-client"

[dependencies.vls-proxy]
git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git"
rev = "5a7f67dbf0245f35b61342d62b99ddedbc6243c8"
#path = "../../vls/vls-proxy"
default-features = false
features = ["grpc"]

[dev-dependencies]
bitcoind = { version = "0.26", features = [ "22_0" ] }
serial_test = "0.6.0"
